--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -1,7 +1,7 @@
 /* ====== CƠ BẢN ====== */
 body {
     margin: 0;
-    font-family: "Poppins", "Segoe UI", sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     background-color: #fff;
     color: #222;
     overflow-y: scroll;
