--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -30,7 +30,7 @@
           <p>Chưa có ảnh nào được tải lên.</p>
         {% endfor %}
       {% else %}
-        <img src="{% static 'core/images/default-avatar.png' %}" alt="Ảnh mặc định">
+        <p>Chưa có ảnh nào được tải lên.</p>
       {% endif %}
     </div>
   </div>
